<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">POI</string>
    <string name="menu_settings">Settings</string>
    <string name="full ">Full </string>
    <string name="take">Take </string>
    <string name="parking">停车场</string>
    <string name="gas_station">加油站 </string>
    <string name="bank">银行</string>
    <string name="sport">体育馆 </string>
    <string name="hotel">酒店住宿</string>
    <string name="cafe">休闲娱乐</string>
    <string name="medical">医疗</string>
    <string name="traffic">公共交通</string>
    <string name="food">餐厅</string>
    <string name="car_repair">汽修店 </string>
    <string name="shopping">购物</string>
    <string name="car_dealer">4S店 </string>
    <string name="car_route">行车路线 </string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="search">查询</string>
    <string name="search_today">查询今天</string>
    <string name="clean">清除</string>
    <string name="setup">设置</string>
    <string name="sure_clean">确定要清除数据吗?</string>
    <string name="key_word">搜索内容</string>
    <string name="search_range">%1$d公里范围内</string>
    <string name="no_poi">1公里内没有您想要的兴趣点</string>
    <string name="no_track">没有轨迹记录</string>
    <string name="not_get_location">没有获得当前位置</string>
    <string name="network_error">链接网络失败</string>
    <string name="start_track">开始记录</string>
    <string name="stop_track">停止记录</string>
    <string name="upload">上传</string>
    <string name="upload_today">上传今天</string>
    <string name="clean_all">本机记录已经全部清除</string>
	<string name="reboot_track">重新开机后是否继续记录</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="getting_location">正在获取位置&#8230;&#8230;&#8230;</string>
	<string name="date_format">yyyy-MM-dd HH:mm</string>
	<string name="download">同步</string>
    <string name="download_today">同步今天</string>
    <string name="download_all">同步全部</string>
    <string name="wrong_time">请正确设置时间</string>
    <string name="label">您正在查找 &lt;font color="#ffffff">%1$s &lt;/font>周边信息</string>
    <string name="change">切换</string>
    <string name="myself_location">当前所在位置</string>
    <string name="route_logger">行车轨迹</string>
    <string name="logging">正在记录行车轨迹</string>
    <string name="uploading">正在上传&#8230;</string>
    <string name="downloading">正在同步&#8230;</string>
    <string name="upload_success">上传成功</string>
    <string name="no_data_upload">没有要数据的上传</string>
    <string name="upload_failed">上传失败</string>
    <string name="download_success">同步成功</string>
    <string name="download_failed">同步失败</string>
    <string name="no_data_download">没有数据可以同步</string>
</resources>