<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <!--
         <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/parking"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/parking"
                android:onClick="onClick"
                android:text="@string/parking" />

            <Button
                android:id="@+id/gas_station"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/gas"
                android:onClick="onClick"
                android:text="@string/gas_station" />

            <Button
                android:id="@+id/car_dealer"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/car_wash"
                android:onClick="onClick"
                android:text="@string/car_dealer" />

            <Button
                android:id="@+id/car_repair"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/car_repair"
                android:onClick="onClick"
                android:text="@string/car_repair"
                android:visibility="gone" />

            <Button
                android:id="@+id/shopping"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/shopping"
                android:onClick="onClick"
                android:text="@string/shopping" />

            <Button
                android:id="@+id/food"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/food"
                android:onClick="onClick"
                android:text="@string/food" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bank"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/bank"
                android:onClick="onClick"
                android:text="@string/bank" />

            <Button
                android:id="@+id/cafe"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/coffee"
                android:onClick="onClick"
                android:text="@string/cafe" />

            <Button
                android:id="@+id/hotel"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/hotel"
                android:onClick="onClick"
                android:text="@string/hotel" />

            <Button
                android:id="@+id/medical"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/medical"
                android:onClick="onClick"
                android:text="@string/medical" />

            <Button
                android:id="@+id/traffic"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/traffic"
                android:onClick="onClick"
                android:text="@string/traffic" />

            <Button
                android:id="@+id/car_route"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/route"
                android:onClick="onClick"
                android:text="@string/car_route"
                android:visibility="gone" />

            <Button
                android:id="@+id/car_wash"
                style="@style/Button_Style"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:drawableTop="@drawable/car_wash"
                android:onClick="onClick"
                android:text="Car Wash"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <!-- </HorizontalScrollView> -->

    <include layout="@layout/bottom_toolbar" />

</LinearLayout>