<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/bg"    android:orientation="vertical" >    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="10dp"        android:orientation="horizontal" >        <Button            android:id="@+id/start_track"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:background="@drawable/btn_1"            android:text="@string/start_track"            android:textAppearance="?android:attr/textAppearanceLarge"            android:textColor="@android:color/white" /> <!-- <Button            android:id="@+id/stop_track"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/stop_track"            android:textAppearance="?android:attr/textAppearanceLarge" /> -->        <Button            android:id="@+id/clean"            android:layout_width="120dp"            android:layout_height="wrap_content"            android:layout_marginLeft="15dp"            android:background="@drawable/btn_1"            android:text="@string/clean"            android:textAppearance="?android:attr/textAppearanceLarge"            android:textColor="@android:color/white" />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="40dp"        android:gravity="center" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:gravity="center"            android:orientation="vertical" >            <LinearLayout                android:layout_width="500dp"                android:layout_height="wrap_content"                android:gravity="center"                android:orientation="horizontal" >                <TextView                    android:id="@+id/textView1"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginRight="20dp"                    android:text="@string/start_time"                    android:textAppearance="?android:attr/textAppearanceLarge" />                <TextView                    android:id="@+id/start_time"                    android:layout_width="200dip"                    android:layout_height="wrap_content"                    android:background="@drawable/date_bg"                    android:gravity="center"                    android:textAppearance="?android:attr/textAppearanceLarge" />                <Button                    android:id="@+id/start_time_setup"                    android:layout_width="80dp"                    android:layout_height="wrap_content"                    android:layout_marginLeft="20dp"                    android:text="@string/setup"                    android:background="@drawable/btn_1"                    android:textColor="@android:color/white"                    android:textAppearance="?android:attr/textAppearanceLarge" />            </LinearLayout>            <LinearLayout                android:layout_width="500dp"                android:layout_height="wrap_content"                android:gravity="center" >                <TextView                    android:id="@+id/textView2"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginRight="20dp"                    android:text="@string/end_time"                    android:textAppearance="?android:attr/textAppearanceLarge" />                <TextView                    android:id="@+id/end_time"                    android:layout_width="200dip"                    android:layout_height="wrap_content"                    android:background="@drawable/date_bg"                    android:gravity="center"                    android:textAppearance="?android:attr/textAppearanceLarge" />                <Button                    android:id="@+id/end_time_setup"                    android:layout_width="80dp"                    android:layout_height="wrap_content"                    android:layout_marginLeft="20dp"                    android:text="@string/setup"                    android:background="@drawable/btn_1"                    android:textColor="@android:color/white"                    android:textAppearance="?android:attr/textAppearanceLarge" />            </LinearLayout>        </LinearLayout>    </LinearLayout>    <LinearLayout        android:layout_width="650dp"        android:layout_height="wrap_content"        android:layout_gravity="center_horizontal"        android:layout_marginTop="20dp" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:layout_weight="1"            android:gravity="center"            android:orientation="vertical" >            <Button                android:id="@+id/search"                style="@style/Route_Button_Style"                android:text="@string/search"                android:textAppearance="?android:attr/textAppearanceLarge" />            <Button                android:id="@+id/search_today"                style="@style/Route_Button_Style"                android:text="@string/search_today"                android:textAppearance="?android:attr/textAppearanceLarge" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:layout_weight="1"            android:gravity="center"            android:orientation="vertical" >            <Button                android:id="@+id/upload"                style="@style/Route_Button_Style"                android:text="@string/upload"                android:textAppearance="?android:attr/textAppearanceLarge" />            <Button                android:id="@+id/upload_today"                style="@style/Route_Button_Style"                android:text="@string/upload_today"                android:textAppearance="?android:attr/textAppearanceLarge" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:layout_weight="1"            android:gravity="center"            android:orientation="vertical" >            <Button                android:id="@+id/download"                style="@style/Route_Button_Style"                android:text="@string/download"                android:textAppearance="?android:attr/textAppearanceLarge" />            <Button                android:id="@+id/download_today"                style="@style/Route_Button_Style"                android:text="@string/download_today"                android:textAppearance="?android:attr/textAppearanceLarge" />        </LinearLayout>    </LinearLayout></LinearLayout>